Fix button alignment

--- a/styles.css
+++ b/styles.css
@@ -244,6 +244,10 @@ input {
     text-align: center;
 }
 
+.modal-text p {
+    padding: 10px;
+}
+
 .modal-text h2 { 
     font-family: "Pokemon_Solid";
     stroke: 2px #2a75bb;
@@ -259,15 +263,19 @@ input {
 .close-button {
     background-color: #2a75bb;
     border: none;
-    border-radius: 25px;
+    border-radius: 50px;
     color: #fefaf6;
     font-family: Poppins;
-    font-size: .9em;
+    font-size: 1.5em;
     font-weight: 600;
     padding: 9px;
     float: right;
     cursor: pointer;
-    width: auto;
+    width: 50px;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    height:50px;
 }
 
 .close-button:hover {
